syntax = "proto3";
option java_multiple_files = true;
package com.evidentdb.examples.autonomo.transfer;

message GeoCoordinates {
  double lat = 1;
  double lng = 2;
}
